# 添加了gradlew文件，用来启动gradle task插件

--- a/demo-common/build.gradle
+++ b/demo-common/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
     testRuntimeOnly "org.junit.platform:junit-platform-commons:1.6.0"
     testCompile "org.junit.platform:junit-platform-engine:1.6.0"
+
+    compile project(':demo-service')
     
 }
