--- a/demo-data/build.gradle
+++ b/demo-data/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     // annotationProcessor 'org.projectlombok:lombok'
     // testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
-    compile project(':demo-common')
+    // compile project(':demo-common')
     // compile project(':demo-data')
 }
