--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'SpringDemo'
-include 'demo-common'
+include 'demo-deploy'
+include 'demo-web'
 include 'demo-data'
 include 'demo-service'
 include 'demo-view'
